--- a/TrueDogStore/Views/Pet/Index.cshtml
+++ b/TrueDogStore/Views/Pet/Index.cshtml
@@ -38,7 +38,8 @@
                                 <div class="d-flex justify-content-between align-items-center mt-2">
                                     <div class="btn-group">
                                         <a class="btn btn-sm btn-outline-secondary" asp-controller="Pet" asp-action="Detail" asp-route-id="@pet.Id">View</a>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                        <a asp-controller="Pet" asp-action="Edit" asp-route-id ="@pet.Id"    class="btn btn-sm btn-outline-secondary">Edit</a>
+                                        <a asp-controller="Pet" asp-action="Delete" asp-route-id="@pet.Id" class="btn btn-sm btn-outline-secondary">Delete</a>
                                     </div>
                                     <small class="text-muted">@pet.Breed.Breed_Group.Name</small>
                                 </div>
