--- a/TrueDogStore/Views/Shared/_Layout.cshtml
+++ b/TrueDogStore/Views/Shared/_Layout.cshtml
@@ -60,10 +60,10 @@
             position: fixed;
             
             width: 100%;
-            background-color: #f8f9fa; /* Цвет фона подвала */
-            padding: 10px 0; /* Отступ сверху и снизу */
+            background-color: #f8f9fa;
+            padding: 10px 0; 
             text-align: center;
-            color: #6c757d; /* Цвет текста */
+            color: #6c757d; 
             bottom: 0;
             z-index: 1000}
     </style>
