--- a/TrueDogStore/Views/Account/Login.cshtml
+++ b/TrueDogStore/Views/Account/Login.cshtml
@@ -31,7 +31,7 @@
                             <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
                         <div class="form-group text-center">
-                            <button class="btn btn-success" type="submit">Log in</button>
+                            <button class="btn btn-success" type="submit" style="margin-right: 15px;">Log in</button>
                             <a class="btn btn-secondary" asp-controller="" asp-action="Index">Cancel</a>
                         </div>
                     </form>
