--- a/TrueDogStore/Views/Pet/Detail.cshtml
+++ b/TrueDogStore/Views/Pet/Detail.cshtml
@@ -100,8 +100,8 @@
                         <p><i class="bi bi-geo-alt"></i> @Model.Shelter.Address</p>
                 </div>
                 <div class="col-md-6">
-                        <p><i class="bi bi-telephone"></i> @Model.Shelter.Phone</p> <!-- Заменяем текст на иконку телефона -->
-                        <p><i class="bi bi-envelope"></i> @Model.Shelter.Email</p> <!-- Заменяем текст на иконку почты -->
+                        <p><i class="bi bi-telephone"></i> @Model.Shelter.Phone</p> 
+                        <p><i class="bi bi-envelope"></i> @Model.Shelter.Email</p> 
                 </div>
             </div>
         </div>
