--- a/TrueDogStore/Views/Pet/Index.cshtml
+++ b/TrueDogStore/Views/Pet/Index.cshtml
@@ -5,10 +5,10 @@
 }
 
 <style>
-    /* Стиль для всех изображений собак */
+   
     .dog-image {
-        width: 300px; /* Задайте желаемую ширину */
-        height: 325px; /* Автоматическая высота для сохранения пропорций */
+        width: 300px; 
+        height: 325px; 
     }
 </style>
 
@@ -34,14 +34,15 @@
                                     {
                                         <p>No image available</p>
                                     }
+                                
                                 </div>
                                 <div class="d-flex justify-content-between align-items-center mt-2">
                                     <div class="btn-group">
-                                        <a class="btn btn-sm btn-outline-secondary" asp-controller="Pet" asp-action="Detail" asp-route-id="@pet.Id">View</a>
+                                        <a class="btn btn-sm btn-outline-primary" asp-controller="Pet" asp-action="Detail" asp-route-id="@pet.Id">View</a>
                                         @if (User.Identity.IsAuthenticated && User.IsInRole("admin"))
                                         {
-                                            <a asp-controller="Pet" asp-action="Edit" asp-route-id ="@pet.Id"    class="btn btn-sm btn-outline-secondary">Edit</a>
-                                            <a asp-controller="Pet" asp-action="Delete" asp-route-id="@pet.Id" class="btn btn-sm btn-outline-secondary">Delete</a>
+                                            <a asp-controller="Pet" asp-action="Edit" asp-route-id="@pet.Id" class="btn btn-sm btn-outline-success">Edit</a>
+                                            <a asp-controller="Pet" asp-action="Delete" asp-route-id="@pet.Id" class="btn btn-sm btn-outline-danger">Delete</a>
                                         }
                                     </div>
                                     <small class="text-muted">@pet.Breed.Breed_Group.Name</small>
