--- a/TrueDogStore/Views/Shared/_Layout.cshtml
+++ b/TrueDogStore/Views/Shared/_Layout.cshtml
@@ -1,4 +1,12 @@
-﻿<!DOCTYPE html>
+﻿﻿@using Microsoft.AspNetCore.Identity
+
+@inject SignInManager<AppUser> SignInManager
+@inject UserManager<AppUser> UserManager
+
+@{
+    var currentUser = await UserManager.GetUserAsync(User);
+}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -7,15 +15,14 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/DogStore.styles.css" asp-append-version="true" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
     <style>
-    
-    
 
- 
 
+
+  
         .card {
             border: none;
             transition: transform 0.3s, box-shadow 0.3s;
@@ -66,6 +73,17 @@
         .navbar {
             position: relative;
         }
+
+        .navbar-nav.ml-auto {
+            margin-right: 100px; 
+        }
+
+       
+        .rounded-circle {
+            width: 45px; 
+            height: auto; 
+        }
+  
     </style>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -73,50 +91,56 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-            <div class="container">
+            <div class="mr-3">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                     <img src="~/images/dogshelterLogo.jpg" alt="DogStore Logo" height="50">DogStore
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav mr-auto">
-                        <!-- Заменяем ml-auto на mr-auto -->
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Pet" asp-action="Index">Pets</a>
-                        </li>
-                        @if (User.Identity.IsAuthenticated)
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Dashboard"
-                                   asp-action="Index">Dashboard</a>
-                                </li>
-                        }
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="FAQ">FAQ</a>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav">
-                        @if(User.Identity.IsAuthenticated)
-                        {
-                                                                  
-                            <li class="nav-item">
-                                <form asp-area="" asp-controller ="Account" asp-action="Logout">
-                                    <button class="btn btn-outline-danger">Logout</button>
-                                </form>
-                            </li>
-                        }
-                        else{
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
-                        </li>}
-                    </ul>
-                </div>
+            </div>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="Pet" asp-action="Index">Pets</a>
+                </li>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Dashboard" asp-action="Index">Dashboard</a>
+                    </li>
+                }
+                <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="FAQ">FAQ</a>
+                </li>
+            </ul>
+            <div class="navbar-nav ml-auto">
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <div class="dropdown text-end">
+                        <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                            @if (!string.IsNullOrEmpty(currentUser.Image))
+                            {
+                                <img alt="Image" src="@currentUser.Image" height="30" class="rounded-circle">
+                            }
+                            else
+                            {
+                                <img src="~/images/default-user-account-photo.jpg" alt="User Photo" class="rounded-circle">
+                            }
+                            
+                        </a>
+                        <ul class="dropdown-menu text-small" style="">
+                            <li><a class="dropdown-item" href="#">Profile</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <form asp-area="" asp-controller="Account" asp-action="Logout">
+                                <button class="btn btn-link dropdown-item">Log out</button>
+                            </form>
+                        </ul>
+                    </div>
+                }
+                else
+                {
+                    <div class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+                    </div>
+                    <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+                }
             </div>
         </nav>
     </header>
