--- a/TrueDogStore/Views/Shared/_Layout.cshtml
+++ b/TrueDogStore/Views/Shared/_Layout.cshtml
@@ -83,7 +83,21 @@
             width: 45px; 
             height: auto; 
         }
-  
+
+        button.logout-button {
+            border: 1px solid red;
+            background-color: white;
+            color: red;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+        }
+
+            button.logout-button:hover {
+                background-color: red;
+                color: white;
+            }
+
+        
     </style>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -110,9 +124,19 @@
                     <a class="nav-link" asp-area="" asp-controller="Home" asp-action="FAQ">FAQ</a>
                 </li>
             </ul>
+            <div class="container" style="margin-top: 5px;">
+                <form class="form-inline justify-content-end" asp-area="" asp-controller="YourController" asp-action="YourAction" method="get">
+                    <div class="input-group">
+                        <input type="text" class="form-control" name="search" placeholder="Search" style="width: 800px;"> <!-- Измените ширину по желанию -->
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-primary" type="submit">Search</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
             <div class="navbar-nav ml-auto">
                 @if (User.Identity.IsAuthenticated)
-                {
+                {                   
                     <div class="dropdown text-end">
                         <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                             @if (!string.IsNullOrEmpty(currentUser.Image))
@@ -126,10 +150,10 @@
                             
                         </a>
                         <ul class="dropdown-menu text-small" style="">
-                            <li><a class="dropdown-item" href="#">Profile</a></li>
+                            <li><a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="DetailUserProfile">Profile</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <form asp-area="" asp-controller="Account" asp-action="Logout">
-                                <button class="btn btn-link dropdown-item">Log out</button>
+                                <button class="btn btn-link dropdown-item logout-button">Log out</button>
                             </form>
                         </ul>
                     </div>
