--- a/TrueDogStore/Views/Shared/_Layout.cshtml
+++ b/TrueDogStore/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿﻿@using Microsoft.AspNetCore.Identity
-
+@using Microsoft.AspNetCore.Http
 @inject SignInManager<AppUser> SignInManager
 @inject UserManager<AppUser> UserManager
 
@@ -14,8 +14,7 @@
     <title>@ViewData["Title"] - DogStore</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/DogStore.styles.css" asp-append-version="true" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
     <style>
@@ -97,6 +96,21 @@
                 color: white;
             }
 
+       
+        .custom-button {
+            background-color: #333;
+            color: white !important;
+            border: 2px solid white !important; 
+            margin-top: -1px;
+        }
+
+            .custom-button:hover {
+                background-color: #333 !important;
+                color: white !important; 
+                border: 2px solid white !important; 
+            }
+
+
         
     </style>
 
@@ -110,30 +124,30 @@
                     <img src="~/images/dogshelterLogo.jpg" alt="DogStore Logo" height="50">DogStore
                 </a>
             </div>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Pet" asp-action="Index">Pets</a>
-                </li>
-                @if (User.Identity.IsAuthenticated)
-                {
-                    <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Dashboard" asp-action="Index">Dashboard</a>
-                    </li>
-                }
-                <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="FAQ">FAQ</a>
-                </li>
-            </ul>
-            <div class="container" style="margin-top: 5px;">
-                <form class="form-inline justify-content-end" asp-area="" asp-controller="YourController" asp-action="YourAction" method="get">
+            <div class="navbar-nav mr-2">
+                <div class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="Pet" asp-action="Index">
+                        <i class="fas fa-paw"></i> Pets
+                    </a>
+                </div>             
+                <div class="nav-item ml-3">
+                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="FAQ"> <i class="bi bi-question-circle"></i> FAQ</a>
+                </div>
+            </div>
+
+            <div class="mx-auto">
+                <form class="form-inline" asp-area="" asp-controller="Search" asp-action="Index" method="get" onsubmit="return validateSearch()">
                     <div class="input-group">
-                        <input type="text" class="form-control" name="search" placeholder="Search" style="width: 800px;"> <!-- Измените ширину по желанию -->
+                        <input type="text" class="form-control rounded" name="search" id="searchInput" placeholder="Search for pet breeds" style="width: 370px;" value="@Context.Request.Query["search"]">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-primary" type="submit">Search</button>
+                            <button class="btn btn-outline-primary custom-button" type="submit">
+                                <i class="bi bi-search"></i>
+                            </button>
                         </div>
                     </div>
                 </form>
             </div>
+
             <div class="navbar-nav ml-auto">
                 @if (User.Identity.IsAuthenticated)
                 {                   
@@ -146,15 +160,18 @@
                             else
                             {
                                 <img src="~/images/default-user-account-photo.jpg" alt="User Photo" class="rounded-circle">
-                            }
-                            
+                            }                            
                         </a>
                         <ul class="dropdown-menu text-small" style="">
-                            <li><a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="DetailUserProfile">Profile</a></li>
+                            <li><a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="DetailUserProfile">View profile</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <form asp-area="" asp-controller="Account" asp-action="Logout">
-                                <button class="btn btn-link dropdown-item logout-button">Log out</button>
-                            </form>
+                            <li><a class="dropdown-item" asp-area="" asp-controller="Dashboard" asp-action="Index">Dashboard</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li>
+                                <form asp-area="" asp-controller="Account" asp-action="Logout">
+                                    <button class="btn btn-link dropdown-item logout-button">Log out</button>
+                                </form>
+                            </li>
                         </ul>
                     </div>
                 }
@@ -186,5 +203,14 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </div>
+    <script>
+        function validateSearch() {
+            var searchInput = document.getElementById("searchInput");
+            if (searchInput.value.trim() === "") {
+              return false; 
+                }
+             return true;
+                  }
+    </script>
 </body>
 </html>
